[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meshbrow"
version = "0.1.0"
description = "Python SDK for Meshbrow — Managed Browser Fleet for AI Agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Bytangle", email = "hello@meshbrow.dev" },
]
keywords = ["browser", "automation", "ai-agents", "stealth", "anti-detection", "cdp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.21",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://meshbrow.dev"
Documentation = "https://docs.meshbrow.dev"
Repository = "https://github.com/meshbrow-dev/meshbrow-python"

[tool.hatch.build.targets.wheel]
packages = ["src/meshbrow"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
